--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">tabs-android</string>
+    <string name="tab_text_1">Quien Soy</string>
+    <string name="tab_text_2">Que estudio</string>
+    <string name="tab_text_3">Tecnologias</string>
+    <string name="tab_text_4">Estadisticas</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
